Configuration to use SQL server and adding migration

--- a/Simple-ToDo/appsettings.json
+++ b/Simple-ToDo/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Simple_ToDo-463BB745-029E-411D-BC94-1800E1DF22AD;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-SPDGKB3;Database=Simple-Todo;Integrated Security=True;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
